--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,6 +8,8 @@ db {
 
 out = "a.txt"
 
-// table1_name:alias1, table2_name:alias2, etc
+
+// SYNTAX: table1_name:alias1, table2_name:alias2, etc
+
 tables = "bil_waybill_payable:p,bil_main_task_form:t,bil_waybill_info:w"
 
